# Django_DRF

./: pyproject.toml
backend/: settings.py  urls.py
core/: router.py  views.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  db_crm.py  user.py
core/serializer/: crm.py
